# ChangeLog for app-arch/pbzip2
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/pbzip2/ChangeLog,v 1.91 2010/07/25 14:55:57 klausman Exp $

  25 Jul 2010; Tobias Klausmann <klausman@gentoo.org> pbzip2-1.1.1.ebuild:
  Stable on alpha, bug #322531

  22 Jul 2010; Markus Meier <maekke@gentoo.org> pbzip2-1.1.1.ebuild:
  arm stable, bug #322531

  18 Jul 2010; <nixnut@gentoo.org> pbzip2-1.1.1.ebuild:
  ppc stable #322531

  05 Jul 2010; Samuli Suominen <ssuominen@gentoo.org> pbzip2-1.1.1.ebuild:
  ppc64 stable wrt #322531

  11 Jun 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> pbzip2-1.1.1.ebuild:
  x86 stable wrt bug #322531

  10 Jun 2010; Jeroen Roovers <jer@gentoo.org> pbzip2-1.1.1.ebuild:
  Stable for HPPA (bug #322531).

  03 Jun 2010; Dror Levin <spatz@gentoo.org> -pbzip2-1.1.0.ebuild,
  pbzip2-1.1.1.ebuild:
  Stable on amd64, bug 322531. Drop old.

*pbzip2-1.1.1 (20 Apr 2010)

  20 Apr 2010; Dror Levin <spatz@gentoo.org> -pbzip2-1.0.5-r1.ebuild,
  +pbzip2-1.1.1.ebuild:
  Version bump, bug 316113. Remove old.

  06 Apr 2010; Markos Chandras <hwoarang@gentoo.org> pbzip2-1.0.5-r2.ebuild:
  Stable on amd64 wrt bug #300113

*pbzip2-1.1.0 (13 Mar 2010)

  13 Mar 2010; Dror Levin <spatz@gentoo.org> +pbzip2-1.1.0.ebuild,
  +files/pbzip2-1.1.0-makefile.patch:
  Version bump.

*pbzip2-1.0.5-r3 (09 Feb 2010)

  09 Feb 2010; Dror Levin <spatz@gentoo.org>
  -files/pbzip2-1.0.2-uclibc.patch, -files/pbzip2-1.0.3-uclibc.patch,
  +pbzip2-1.0.5-r3.ebuild, +files/pbzip2-1.0.5-fix-stdout-optparse.patch:
  Add patch to fix command line handling, bug 302757. Clean old patches.

  25 Jan 2010; Raúl Porcel <armin76@gentoo.org> pbzip2-1.0.5-r2.ebuild:
  alpha/arm/ia64/m68k/s390/sh stable wrt #300113

  15 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  pbzip2-1.0.5-r2.ebuild:
  stable x86, bug 300113

  13 Jan 2010; Jeroen Roovers <jer@gentoo.org> pbzip2-1.0.5-r2.ebuild:
  Stable for HPPA (bug #300113).
