@@ -5,6 +5,6 @@ DIST pbzip2-1.0.5.tar.gz 26997 RMD160 31b390b3023d8d5b64496b5bb43a11fc253a5b62 S
 DIST pbzip2-1.1.1.tar.gz 46953 RMD160 ad1755174cdaa7b172f1e0da674f93256d5acaf6 SHA1 605e2cc1596b540358d650bf3ab647ad9152f233 SHA256 f6fc18db5c217e5637c0afa8db81a1c755691f29c42ed2ee0bac7df5103668b4
 EBUILD pbzip2-1.0.5-r2.ebuild 1226 RMD160 a60675ae7eb2fa12c54f606bffb2cb5f4ebb3948 SHA1 f835a5e672077bcfd1f9e5a54262f0e2f19a0680 SHA256 b131553e060dbc300150c5b85d626a44889f405554ae8a48e7a17a5b80624970
 EBUILD pbzip2-1.0.5-r3.ebuild 1276 RMD160 588db9020e953355311aa63bf89762adba8c0f56 SHA1 6dc577f4bbc265ac03beb4c402d18819580ac235 SHA256 f4758e349bec4031ed7e4277aaaca9488bba03806d086d9c79fe2b1376e0e166
-EBUILD pbzip2-1.1.1.ebuild 1155 RMD160 955f4e03d536325f1f1b6e9945da684288971183 SHA1 739f823c5e31abd913b47d7dc8c367f61d7f60f1 SHA256 e32d27d288cce18b016af2419a02de820c653ffac0406804cc28a210b6920170
-MISC ChangeLog 11249 RMD160 870a1cfa18e7c9735f992bc28c5d43deb2a7faad SHA1 8f7768681f9e91af84eafe743604896916a1e872 SHA256 dd77f0b5ad19e45fe0edf5b59eb84b3d2c33970d943dd4477536dfe0986fa226
-MISC metadata.xml 250 RMD160 08f8cb4c4b17b986418f11e803927228d83141c1 SHA1 90963367c7515b7ebd76f633f24371b11a6a7ce5 SHA256 66e248b5390ab7408117c8b0dad7faafc2f8513dbc9ccba42f3a68f4e7eeb713
+EBUILD pbzip2-1.1.1.ebuild 1154 RMD160 1f5bbe889464c232538713165e1819b8154b8748 SHA1 60788ab25d23b0cb0cc29cca4831f5119372a168 SHA256 7b6e36ae92ccaa0af2cb2c1159273801ee06fea0e4014f387c0bd8b2d37f4bc7
+MISC ChangeLog 11530 RMD160 aa3d3934f7cc019b0b64ce5c39efef2a75f63237 SHA1 80df0fe3ced3c5ea83e2459a997e01a5b8f67813 SHA256 5a9fb4fa162e9058675a73593d0d78f6e79efef3c0acdc91dcbfc0a889b36578
+MISC metadata.xml 368 RMD160 8935209d9c697a9312fcbc87a82b4ad9ee46a741 SHA1 f2988d3d361c0b5d096c6bf44ace87a775668fd5 SHA256 52b61e7c958e5bca86fc0d33219e84942f62bb80410b706bd8c82da949589ddd
